[package]
name = "iml-ntp"
version = "0.1.0"
authors = ["IML Team <iml@whamcloud.com>"]
edition = "2018"

[dependencies]
tokio = "0.2"
iml-wire-types = { path = "../../iml-wire-types", version = "0.2" }
iml-rabbit = { path = "../../iml-rabbit", version = "0.1.0" }
iml-postgres = { path = "../../iml-postgres", version = "0.1.0" }
iml-service-queue = { path = "../iml-service-queue", version = "0.1.0" }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.1"
