[package]
name = "iml-ntp"
version = "0.1.0"
authors = ["IML Team <iml@whamcloud.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
futures = "0.3"
iml-orm = { path = "../../iml-orm", version = "0.1.0", features = ["postgres-interop"] }
iml-rabbit = { path = "../../iml-rabbit", version = "0.1.0" }
iml-service-queue = { path = "../iml-service-queue", version = "0.1.0" }
iml-wire-types = { path = "../../iml-wire-types", version = "0.2" }
tokio = "0.2"
tokio-diesel = "0.3"
tracing = "0.1"
tracing-subscriber = "0.1"
